<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hire"
            android:icon="@drawable/ic_baseline_post_add_24"
            android:title="@string/menu_hire" />
        <item
            android:id="@+id/nav_confirm"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_confirm" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/ic_baseline_find_in_page_24"
            android:title="View Jobs" />
        <item
            android:id="@+id/nav_Review"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/menu_review" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_exit" />

    </group>
</menu>